# auth-service

./: .deprecated_files  .description.md  .design.md  .flake8  .gitignore  .mandatory_files  .mandatory_files_ignore  .pre-commit-config.yaml  .readme_template.md  .static_files  .static_files_ignore  Dockerfile  Dockerfile.debian  Dockerfile.dhi  README.md  config_schema.json  example_config.yaml  openapi.yaml  pyproject.toml  readme_generation.md  requirements-dev-common.in  requirements-dev-common.txt  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg
.devcontainer/: .dev_config.yaml  Dockerfile  dev_install  dev_launcher  devcontainer.json  docker-compose.yml
.github/workflows/: cd.yaml  check_config_docs.yaml  check_config_schema_and_example.yaml  check_db_migration_scripts.yaml  check_openapi_spec.yaml  check_readme.yaml  ci_release.yaml  ci_workflow_dispatch.yaml  dev_cd.yaml  static_code_analysis.yaml  tests.yaml
.pyproject_generation/: pyproject_custom.toml  pyproject_template.toml
.readme_generation/: README.md  description.md  design.md
.template/: static_files.txt
auth_adapter/: __main__.py  config.py
auth_adapter/api/: deps.py  main.py
auth_adapter/dao/: __init__.py  db.py
auth_adapter/pubsub/: __init__.py
auth_service/: __init__.py  __main__.py  config.py  deps.py
auth_service/auth_adapter/: __init__.py
auth_service/auth_adapter/api/: __init__.py  basic.py  deps.py  headers.py  main.py
auth_service/auth_adapter/core/: __init__.py  auth.py  jwks.py
auth_service/auth_adapter/dao/: db_models.py
auth_service/auth_adapter/pubsub/: main.py
auth_service/user_management/: __init__.py  auth.py  utils.py
auth_service/user_management/api/: __init__.py  deps.py  main.py
auth_service/user_management/api/routers/: __init__.py  users.py
auth_service/user_management/claims_repository/: __init__.py  deps.py  router.py  utils.py
auth_service/user_management/claims_repository/core/: __init__.py  claims.py  seed.py  utils.py
auth_service/user_management/claims_repository/models/: __init__.py  dto.py
auth_service/user_management/claims_repository/ports/: dao.py
auth_service/user_management/claims_repository/translators/: dao.py
auth_service/user_management/core/: __init__.py
auth_service/user_management/models/: __init__.py  dto.py
auth_service/user_management/ports/: dao.py  dto.py
auth_service/user_management/translators/: dao.py
auth_service/user_management/user_registry/: __init__.py  deps.py  router.py  utils.py
auth_service/user_management/user_registry/models/: __init__.py  dto.py
auth_service/user_management/user_registry/ports/: dao.py
auth_service/user_management/user_registry/translators/: dao.py
db_migration/: alembic.ini
db_migration/alembic/: env.py
db_migration/alembic/versions/: README
docs/: README.md
example_data/: README.md
lock/: requirements-dev-template.in  requirements-dev.in  requirements-dev.txt  requirements.txt
my_microservice/: __init__.py  __main__.py  config.py  models.py
my_microservice/api/: main.py
my_microservice/core/: greeting.py
scripts/: check_license.py  create_dev_keys.py  get_config_schema_and_example.py  get_package_name.py  license_checker.py  openapi_from_app.py  update_all.py  update_config_docs.py  update_hook_revs.py  update_lock.py  update_openapi_docs.py  update_readme.py
scripts/script_utils/: __init__.py  cli.py  fastapi_app_location.py  get_app.py
src/auth_service/: __init__.py  __main__.py  config.py  constants.py  deps.py  otel.py  prepare.py
src/auth_service/auth_adapter/: __init__.py  deps.py  prepare.py
src/auth_service/auth_adapter/adapters/: __init__.py  memory_session_store.py
src/auth_service/auth_adapter/api/: __init__.py  basic.py  csrf.py  dto.py  headers.py  main.py  router.py
src/auth_service/auth_adapter/core/: __init__.py  auth.py  session_store.py  sessions.py  totp.py  verify_totp.py
src/auth_service/auth_adapter/ports/: __init__.py  dao.py  event_pub.py  session_store.py  totp.py
src/auth_service/auth_adapter/rest/: __init__.py  basic.py  dto.py  headers.py  router.py
src/auth_service/claims_repository/: __init__.py  deps.py
src/auth_service/migrations/: __init__.py  definitions.py  entry.py
src/auth_service/rest/: __init__.py  auth.py  router.py
src/auth_service/user_management/: __init__.py  auth.py  prepare.py
src/auth_service/user_registry/: __init__.py  deps.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  auth_keys.py  constants.py  utils.py
tests/integration/: __init__.py  conftest.py  test_api.py  test_migrations.py
tests/integration/auth_adapter/: __init__.py  conftest.py  fixtures.py  test_api.py  test_oidc_discovery.py  test_sessions.py  test_totp.py  test_user_sessions.py
tests/integration/claims_repository/: __init__.py  fixtures.py  test_access_api.py  test_api.py  test_claims_api.py  test_dao.py  test_deletion.py  test_seed.py  test_upload_access_api.py
tests/integration/fixtures/: __init__.py
tests/integration/user_management/: __init__.py  conftest.py  fixtures.py  test_api.py  test_dao.py
tests/integration/user_registry/: __init__.py  conftest.py  fixtures.py  test_api.py  test_dao.py
tests/unit/: __init__.py  test_auth.py  test_dummy.py  test_utils.py
tests/unit/auth_adapter/: __init__.py  conftest.py  test_api.py  test_basic.py  test_basic_auth.py  test_core.py  test_csrf.py  test_get_session.py  test_get_user_info.py  test_headers.py  test_memory_session_store.py  test_session_store.py  test_sessions.py  test_token_exchange.py  test_token_signing.py  test_token_validation.py  test_totp.py  test_verify_totp.py
tests/unit/claims_repository/: __init__.py  test_claims.py  test_deletion.py  test_models.py  test_utils.py
tests/unit/fixtures/: __init__.py
tests/unit/user_management/: __init__.py  conftest.py  test_auth.py  test_utils.py
tests/unit/user_registry/: __init__.py  conftest.py  test_event_pub.py  test_models.py  test_registry.py  test_utils.py  test_validation.py  test_verification_codes.py
(+96 files in other folders)
