# Copyright 2021 - 2022 Universität Tübingen, DKFZ and EMBL
# for the German Human Genome-Phenome Archive (GHGA)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
# Please adapt to package name:
name = my_microservice
version = attr: my_microservice.__version__
description = My-Microservice - a short description
url = https://github.com/ghga-de/my-microservice
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = German Human Genome Phenome Archive (GHGA)
author_email = contact@ghga.de
license = Apache 2.0
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    # Please adapt to the current version of the library
    # and remove the unneeded extras:
    ghga-service-chassis-lib[api,pubsub,mongo_connect,object_storage_dao,s3,postgresql]==0.12.0


python_requires = >= 3.9

[options.entry_points]
# Please adapt to package name:
console_scripts =
    my-microservice = my_microservice.__main__:run

[options.extras_require]
dev =
    # Please adapt to the current version of the library
    ghga-service-chassis-lib[dev]==0.12.0

# Please adapt: Only needed if you are using alembic for database versioning (Probably for PostgreSQL)
db_migration =
    alembic==1.6.5
    alembic-autogen-check==1.1.1

all =
    %(dev)s
    %(db_migration)s


[options.packages.find]
exclude = tests
