# Copyright 2021 - 2023 Universität Tübingen, DKFZ, EMBL, and Universität zu Köln
# for the German Human Genome-Phenome Archive (GHGA)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = auth_service
version = attr: auth_service.__version__
description = Authentication service for the GHGA data portal used by the API gateway via the ExtAuth protocol
url = https://github.com/ghga-de/auth-service
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = German Human Genome Phenome Archive (GHGA)
author_email = contact@ghga.de
license = Apache 2.0
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Scientific/Engineering :: Bio-Informaticspy

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    ghga-service-chassis-lib[api]==0.17.0
    hexkit[mongodb]==0.8.2
    pydantic[email]==1.10.4
    jwcrypto==1.4.2

python_requires = >= 3.9

[options.entry_points]
console_scripts =
    auth-service = auth_service.__main__:run

[options.extras_require]
dev =
    hexkit[dev]==0.8.2
    httpx==0.23.3
    typer==0.7.0

all =
    %(dev)s

[options.packages.find]
exclude = tests
